# tock-teensy

./: .gitignore  .gitmodules  Makefile  README.md  console.rs  debug.rs  rust-toolchain  userland_generic.ld
apps/: MakeVariables.mk
apps/examples/dotstar/cylon/: main.c
apps/examples/rng/: main.c
apps/examples/uart_echo/: serial.c  xmodem.c
apps/examples/xmodem_leds/: README  main.c  write_file.py  xmodem.c  xmodem_send.py
apps/hello_world/: Makefile
boards/: Makefile
boards/teensy/: Cargo.toml  Makefile  chip_layout.ld
boards/teensy/src/: io.rs  main.rs  pins.rs  spi.rs  xconsole.rs
boards/teensy/src/components/: alarm.rs  console.rs  gpio.rs  led.rs  mod.rs  rnga.rs  spi.rs  xconsole.rs
boards/teensy/src/tests/: alarm.rs  blink.rs  mod.rs  print.rs  registers.rs  rng.rs  spi.rs  timer.rs
chips/mk66/: Cargo.toml
chips/mk66/src/: chip.rs  gpio.rs  i2c.rs  lib.rs  mcg.rs  mpu.rs  nvic.rs  osc.rs  pit.rs  port.rs  rnga.rs  sim.rs  spi.rs  timer.rs  uart.rs  wdog.rs
chips/mk66/src/common/: register.rs  register_macros.rs
chips/mk66/src/regs/: i2c.rs  mcg.rs  mod.rs  osc.rs  pit.rs  sim.rs  spi.rs  timer.rs  uart.rs  wdog.rs
common/src/regs/: README.md  macros.rs  mod.rs
kernel-tests/: Cargo.toml
kernel-tests/src/: blink.rs  lib.rs  registers.rs
libteensy/: Makefile  multibus.c  spi_half_duplex.c  spi_half_duplex.h
