[package]
name = "teensy"
version = "0.1.0"
authors = ["Shane Leonard <shanel@stanford.edu>"]

[profile.dev]
panic = "abort"
lto = true
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
kernel = { path = "../../tock/kernel" }
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
mk66 = { path = "../../chips/mk66/" }
components = { path = "../../tock/boards/components" }

